<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vinotory</string>
    
    <!-- Menu Strings -->
    <string name="menu_settings">Settings</string>
    <string name="menu_empty_db">Empty the Database</string>
    
    <!-- Main Activity Strings -->
    <string name="main_add_bottle">Add a Bottle</string>
    <string name="main_inventory">Check your Vinotory</string>
	
    <!-- Add Wine Bottle Strings -->
	<string name="add_create">Create</string>
	<string name="add_cancel">Cancel</string>
	<string name="add_vineyard_input">Vineyard</string>
	<string name="add_year_input">Year</string>
	<string name="add_type_input">Type</string>
	<string name="add_quantity_input">Quantity</string>
	<string name="add_comment_input">Comment</string>
	
	<!-- List Item Views -->
	<string name="listItemVineyard">Vineyard</string>
	<string name="listItemType">Type</string>
	<string name="listItemYear">Year</string>
	
	<!-- Selected Bottle Strings -->
	<string name="selected_vineyard_label">Vineyard</string>
	<string name="selected_year_label">Year</string>
	<string name="selected_type_label">Type</string>
	<string name="selected_quantity_label">Quantity</string>
	<string name="selected_comment_label">Comment</string> 
</resources>