<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWineBottleActivity" >
    
    <Button
        android:id="@+id/addCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="63dp"
        android:onClick="finishAddWineBottleActivity"
        android:text="@string/add_cancel" />

    <Button
        android:id="@+id/addCreateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addCancelButton"
        android:layout_alignBottom="@+id/addCancelButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="69dp"
        android:onClick="addWineBottleToDatabase"
        android:text="@string/add_create" />

    <EditText
        android:id="@+id/addVineyardInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/add_vineyard_input" />

    <EditText
         android:id="@+id/addYearInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/addVineyardInput"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="@string/add_year_input" />
    
     <EditText
         android:id="@+id/addTypeInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/addYearInput"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
         android:digits="0123456789"
         android:hint="@string/add_type_input" />

     <EditText
         android:id="@+id/addQuantityInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/addTypeInput"
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="number"
         android:digits="0123456789"
         android:hint="@string/add_quantity_input" />
     
     <EditText
         android:id="@+id/addCommentInput"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/addQuantityInput"
         android:layout_marginTop="20dp"
         android:inputType="textMultiLine"
         android:ems="10"
         android:hint="@string/add_comment_input" />

</RelativeLayout>
