<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:id="@+id/vineyardLayoutWrapper" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	    <TextView
	        android:id="@+id/listItemVineyard"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="top"
	        android:text="@string/listItemVineyard"
	        android:textSize="20sp" >
	
	    </TextView>
	
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/typeYearLayoutWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/vineyardLayoutWrapper">
	    
        <TextView
            android:id="@+id/listItemType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/listItemType"
            android:textSize="20sp" />
    
        <TextView
            android:id="@+id/listItemYear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/listItemYear"
            android:textSize="20sp" />
    </LinearLayout>
    
</RelativeLayout> 